<resources>
    <string name="app_name">桂工端</string>
    <string name="settings">设置</string>
    <string name="mode_night">主题模式(%s)</string>
    <string name="check_update">检查更新 v</string>
    <string name="about">关于</string>
    <string name="login">登录</string>
    <string name="finance">财务</string>
    <string name="examList">考试安排</string>
    <string name="courseList">学期课程</string>
    <string name="about_this_app">关于此应用</string>
    <string name="exam">考试安排</string>
    <string name="study_progress">学业进度</string>
    <string name="student_info">学籍信息</string>
    <string name="grade">成绩查询</string>
    <string name="sid">学号</string>
    <string name="password">密码</string>
    <string name="captcha">验证码</string>
    <string name="login_now">登录教务</string>
    <string name="empty_tips">这里空空如也!</string>
    <string name="empty_courses_tips">没有课程安排哦!</string>
    <string name="course_name">课程名称</string>
    <string name="teacher_name">教师名称</string>
    <string name="week_arrange">上课周数</string>
    <string name="update_tip">更新提醒</string>
    <string name="feedback">吐个槽</string>
    <string name="logout">重新登录</string>
    <string name="theme_color">主题颜色</string>
    <string name="system_bar_color">系统栏着色</string>
    <string name="release_log">版本更新日志</string>
    <string name="add">添加</string>
    <string name="open_with_browser">浏览器打开</string>
    <string name="current_term_courses">本学期课表</string>
    <string name="all_term">全部课表</string>
    <string name="enter">直接进入</string>
    <string name="today_courses">今日课表</string>
    <string name="course_table">课表</string>
    <string name="explore_more">更多</string>
    <string name="mine">我的</string>
    <string name="school_year">学年</string>
    <string name="term">学期</string>
    <string name="pull_term_courses">导入新课表</string>
    <string name="delete_selected">删除选中</string>
    <string name="selected_all">全部选中</string>
    <string name="unselected_all">取消选中</string>
    <string name="add_course">添加新课程</string>
    <string name="modify_course">编辑课程</string>
    <string name="all_courses">全部课表</string>
    <string name="fetch_grade">成绩查询</string>
    <string name="update_now">立即更新</string>
    <string name="download_with_browser">浏览器下载</string>
    <string name="new_version">发现新版本</string>
    <string name="new_version_description">"新版本：%1$s\n发布时间：%2$s\n更新描述：\n%3$s"</string>
    <string name="action_title_download">选择下载方式</string>
    <string name="tips_file_download">是否下载该文件？</string>
    <string name="action_title_file_download">选择下载方式</string>
    <string name="action_title_file_upload">上传文件</string>
    <string name="action_title_choice_browser">选择浏览器</string>
    <string name="browser_argument_error">参数有误，无法打开网页！</string>
    <string name="tips_confirm_delete">删除选中课程？</string>
    <string name="data_loading">获取中</string>
    <string name="grade_details">成绩详情</string>
    <string name="message_grade_count">共计%d条成绩信息</string>
    <string name="tips_logout">确定退出并清空数据？</string>
    <string name="tips_delete_term">删除该学期？</string>
    <string name="delete_term_info">将会删除该学期相关所有课程信息！</string>
    <string name="tips_switch_term">切换到该学期？</string>
    <string name="data_load_success">刷新成功</string>
    <string name="refresh">刷新</string>
    <string name="expand_less">关闭更多</string>
    <string name="year">年</string>
    <string name="spring">春</string>
    <string name="fall">秋</string>
    <string name="pull_now">立即导入</string>
    <string name="title_cw">财务</string>
    <string name="title_jw">教务</string>
    <string name="title_ts">图书</string>
    <string name="classroom_hit">教学地点</string>
    <string name="balance">余额</string>
    <string name="payment_record">交易记录</string>
    <string name="tuition_items">学费项目</string>
    <string name="finance_center">财务中心</string>
    <string name="payment_details">缴费明细</string>
    <string name="card_charge">饭卡充值</string>
    <string name="delete">删除</string>
    <string name="hold">暂存</string>
    <string name="course_arrange">课程安排</string>
    <string name="until">至</string>
    <string name="course_credit">课程学分</string>
    <string name="add_course_arrange">添加课程安排</string>
    <string name="user_privacy">用户协议及隐私政策</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="inner_page_tips">内置页面，无法在浏览器打开</string>
    <string name="checking_version">正在检查版本更新…</string>
    <string name="clean_data">正在清除数据</string>
</resources>
