<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_selected"
        app:iconTint="?colorControlNormal"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_check_box"
        android:title="@string/selected_all"
        app:iconTint="?colorControlNormal"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_select_none"
        android:icon="@drawable/ic_indeterminate_check_box"
        android:title="@string/unselected_all"
        app:iconTint="?colorControlNormal"
        app:showAsAction="ifRoom" />

</menu>