<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.jacknic.glut.BuildConfig" />

        <variable
            name="prefer"
            type="com.jacknic.glut.util.Preferences" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnThemeColor"
                style="@style/ItemButtonStyle"
                android:layout_marginTop="@dimen/primary_offset"
                android:text="@string/theme_color"
                app:icon="@drawable/ic_style"
                app:iconTint="?colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTintToolbar"
                style="@style/ItemButtonStyle"
                android:layout_marginTop="0.5dp"
                android:onClick="@{()->swTintToolbar.toggle()}"
                android:text="@string/system_bar_color"
                app:icon="@drawable/ic_format_color_fill"
                app:iconTint="@color/teal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnThemeMode" />

            <Switch
                android:id="@+id/swTintToolbar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@null"
                android:checked="@={prefer.tintToolbar}"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@id/btnTintToolbar"
                app:layout_constraintEnd_toEndOf="@id/btnTintToolbar"
                app:layout_constraintTop_toTopOf="@id/btnTintToolbar" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnThemeMode"
                style="@style/ItemButtonStyle"
                android:layout_marginTop="0.5dp"
                android:text="@string/mode_night"
                app:icon="@drawable/ic_sunny"
                app:iconTint="@color/amber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnThemeColor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnReleaseLog"
                style="@style/ItemButtonStyle"
                android:layout_marginTop="@dimen/primary_offset"
                android:text="@string/update_tip"
                app:icon="@drawable/ic_update_rocket"
                app:iconTint="@color/orange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnTintToolbar" />

            <Switch
                android:id="@+id/swAutoCheck"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@null"
                android:checked="@={prefer.autoCheck}"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/btnReleaseLog"
                app:layout_constraintEnd_toEndOf="@id/btnReleaseLog"
                app:layout_constraintTop_toTopOf="@id/btnReleaseLog"
                tools:checked="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdateCheck"
                style="@style/ItemButtonStyle"
                android:layout_marginTop="0.5dp"
                android:background="@android:color/transparent"
                android:text='@{@string/check_update + BuildConfig.VERSION_NAME}'
                app:icon="@drawable/ic_update"
                app:iconTint="@color/green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/swAutoCheck"
                tools:text="@string/check_update" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFeedback"
                style="@style/ItemButtonStyle"
                android:layout_marginTop="@dimen/primary_offset"
                android:text="@string/feedback"
                app:icon="@drawable/ic_comment"
                app:iconTint="@color/blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnUpdateCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAbout"
                style="@style/ItemButtonStyle"
                android:layout_marginTop="0.5dp"
                android:text="@string/about"
                app:icon="@drawable/ic_help_outline"
                app:iconTint="@color/teal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnFeedback" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                style="@style/ActionButtonStyle"
                android:layout_marginTop="30dp"
                android:text="@string/logout"
                app:backgroundTint="?colorError"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnAbout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>